--- a/index.html
+++ b/index.html
@@ -50,28 +50,36 @@
 
         <div class="__seccion-dos-columnas">
             <h2>Sección dos columnas</h2>
-            <div>
+            <div class="__columna">
                 <h3>Título 1</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci, nesciunt non aperiam atque commodi.</p>
             </div>
-            <div>
+            <div class="__columna">
                 <h3>Título 2</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
-            <div>
+            <div class="__columna">
                 <h3>Título 3</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
-            <div>
+            <div class="__columna">
                 <h3>Título 4</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
-            <div>
+            <div class="__columna">
                 <h3>Título 5</h3>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
         </div>
 
+        <h2 class="__titulo-fire">Lorem ipsum</h2>
+        <h2 class="__titulo-movie-camera">Lorem ipsum</h2>
+        <h2 class="__titulo-rocket">Lorem ipsum</h2>
+
+        <div class="__seccion-quote">
+            <img src="" alt="">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+        </div>
 
     </main>
 
