quotes. SCSS mixins, variables e includes

--- a/index.html
+++ b/index.html
@@ -72,12 +72,20 @@
             </div>
         </div>
 
-        <h2 class="__titulo-fire">Lorem ipsum</h2>
-        <h2 class="__titulo-movie-camera">Lorem ipsum</h2>
-        <h2 class="__titulo-rocket">Lorem ipsum</h2>
+        <h2 class="__emoji __fire">Lorem ipsum</h2>
+        <h2 class="__emoji __movie-camera">Lorem ipsum</h2>
+        <h2 class="__emoji __rocket">Lorem ipsum</h2>
 
-        <div class="__seccion-quote">
-            <img src="" alt="">
+        <div class="__quote __alerta">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+        </div>
+        <div class="__quote __ok">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+        </div>
+        <div class="__quote __cita">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+        </div>
+        <div class="__quote __info">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
         </div>
 
