--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
     
     <main>
-
+        <div class="__seccion-titulo-parrafo">
+            <h2>Sección Titulo y párrafo</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi at autem consequuntur qui ratione vel inventore odit laboriosam quo iure voluptate vitae assumenda est dolorem quasi, velit sit. Veniam, praesentium.</p>
+        </div>
         <!-- MODULO DE CÓDIGO -->
         <div class="__seccion-codigo">
             <h2>Sección código</h2>
