--- a/node-2020-1S/00-bienvenida/virtual/bienvenida_e_introduccion.html
+++ b/node-2020-1S/00-bienvenida/virtual/bienvenida_e_introduccion.html
@@ -2,20 +2,20 @@
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
 <div class="__seccion-titulo-parrafo">
-    <h2 class="__h2">¿De qué se trata el curso?</h2>
+    <div class="__h2">¿De qué se trata el curso?</div>
     <p>¡Te damos la bienvenida al curso de Desarrollo web full stack!</p>
     <p>Sumergite en este mundo, conocé las tecnologías más novedosas y las herramientas que necesitás para poder desarrollar sun sitio web de punta a punta. A lo largo de estos 5 meses vas a trabajar en equipo, pensar proyectos, resolver desafíos, investigar y meter mucho las manos en el código.</p>
     <p>¿Empezamos?</p>
 </div>
 
 <div class="__seccion-titulo-parrafo">
-    <h2 class="__h2">¿Qué vas a lograr en el curso?</h2>
+    <div class="__h2">¿Qué vas a lograr en el curso?</div>
     <p>En el curso de Desarrollo web Full Stack nos proponemos lograr que adquieras y desarrolles las herramientas, habilidades y conocimientos técnicos necesarios para resolver situaciones que posteriormente se le van a presentar en la vida real. También buscaremos que aprendas a “pensar como programador/a”, habilidad que incluye desde armar un sistema hasta lograr identificar errores en el mismo, proponer soluciones y actualizar en base a cambios en las tecnologías.</p>
     <p>Buscaremos fomentar constantemente la investigación, la búsqueda de información, la lectura de documentación técnica y el trabajo  en equipo.</p>
 </div>
 
 <div class="__seccion-check">
-    <h2 class="__h2">¿Qué vas a aprender en el curso?</h2>
+    <div class="__h2">¿Qué vas a aprender en el curso?</div>
     <ul>
         <li>Adquirir los conocimientos necesarios para desarrollar un sitio web de punta a punta integrando front-end y back-end.</li>
         <li>Identificar fallas en un proyecto e implementar las modificaciones necesarias para resolverlo.</li>
@@ -26,47 +26,47 @@
 </div>
 
 <div class="__seccion-dos-columnas">
-    <h2 class="__h2">¿Qué vas a ver en el curso?</h2>
+    <div class="__h2">¿Qué vas a ver en el curso?</div>
     <div class="__columna">
-        <h3 class="__h3">JavaScript y NODE</h3>
+        <div class="__h3">JavaScript y NODE</div>
         <p>Vamos a conocer el potencial que nos dá este lenguaje y experimentar las diversidad de aplicaciones que se pueden realizar gracias al entorno de desarrollo de NODE.</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">Git y SCRUM</h3>
+        <div class="__h3">Git y SCRUM</div>
         <p>Aprender metodologías y herramientas de trabajo que se utilizan en el ámbito del desarrollo.</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">HTML + CSS</h3>
+        <div class="__h3">HTML + CSS</div>
         <p>Comprender cómo se estructura un sitio web y cómo podemos darle estilo y diseño  a esa estructura.</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">Express</h3>
+        <div class="__h3">Express</div>
         <p>Desarrollaremos el concepto de FullStack al unir el mundo del Front-End con el Backend. Para esto utilizaremos el framework más usado en el ecosistema de NODE.</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">SQL</h3>
+        <div class="__h3">SQL</div>
         <p>Conoceremos qué son las bases de datos y cómo podemos operar sobre las mismas. </p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">JavaScript front-end y React</h3>
+        <div class="__h3">JavaScript front-end y React</div>
         <p>Vamos a agregar dinamismo e interactividad a nuestro Front-End. Luego veremos cómo reutilizar lógica con una introducción de componentes con React.</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">Deploy de un proyecto</h3>
+        <div class="__h3">Deploy de un proyecto</div>
         <p>Aprender como hacer el deploy de un desarrollo y exponer el proyecto integrador</p>
     </div>
     <div class="__columna">
-        <h3 class="__h3">Programación orientada a objetos </h3>
+        <div class="__h3">Programación orientada a objetos </div>
         <p>Taller optativo y extracurricular para conocer sobre el paradigma de programación orientada a objetos.</p>
     </div>
 </div>
 
 <div class="__seccion-tarjetas">
-    <h2 class="__h2">Tus profes</h2>
+    <div class="__h2">Tus profes</div>
     <div class="__wrapper-tarjeta">
         <img src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
         <div class="__combo-texto">
-            <h3 class="__h3">Marty Mcfly</h3>
+            <div class="__h3">Marty Mcfly</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae enim alias accusamus repudiandae commodi rerum eum. Fugit, vel ad!</p>
             <small>marty@digitalhouse.com</small>
         </div>
@@ -74,7 +74,7 @@
     <div class="__wrapper-tarjeta">
         <img src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
         <div class="__combo-texto">
-            <h3 class="__h3">Marty Mcfly</h3>
+            <div class="__h3">Marty Mcfly</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae enim alias accusamus repudiandae commodi rerum eum. Fugit, vel ad!</p>
             <small>marty@digitalhouse.com</small>
         </div>
