--- a/node-2020-1S/00-bienvenida/virtual/bienvenida_e_introduccion.html
+++ b/node-2020-1S/00-bienvenida/virtual/bienvenida_e_introduccion.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
-<link rel="stylesheet" href="../../../css/style.css">
+<!-- <link rel="stylesheet" href="../../../css/style.css"> -->
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
 <div class="__seccion-titulo-parrafo">
