orientaciones generales, emojis

--- a/index.html
+++ b/index.html
@@ -17,31 +17,30 @@
     
     <main>
         <div class="__seccion-titulo-parrafo">
-            <h2>Sección Titulo y párrafo</h2>
+            <div class="__h2">Sección Titulo y párrafo</div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi at autem consequuntur qui ratione vel inventore odit laboriosam quo iure voluptate vitae assumenda est dolorem quasi, velit sit. Veniam, praesentium.</p>
         </div>
         <!-- MODULO DE CÓDIGO -->
         <div class="__seccion-codigo">
-            <h2>Sección código</h2>
+            <div class="__h2">Sección código</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione accusantium in, perferendis doloribus vero dolor illo architecto atque beatae eum?</p>
             <div class="__wrapper-codigo"></div>
         </div>
 
         <div class="__seccion-tarjetas">
-            <h2>Sección tarjetas</h2>
+            <div class="__h2">Sección tarjetas</div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure temporibus architecto dignissimos eius aliquam, ad nisi animi accusamus debitis accusantium!</p>
             <div class="__wrapper-tarjeta">
                 <img src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
                 <div class="__combo-texto">
-                    <h3>Marty Mcfly</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam recusandae enim alias accusamus repudiandae commodi rerum eum. Fugit, vel ad!</p>
+                    <div class="__h3">Marty Mcfly</div>
                     <small>marty@digitalhouse.com</small>
                 </div>
             </div>
         </div>
 
         <div class="__seccion-check">
-            <h2>Seccion Checks</h2>
+            <div class="__h2">Seccion Checks</div>
             <ul>
                 <li>Cómo maquetar una web</li>
                 <li>Cómo conquistar el mundo</li>
@@ -52,32 +51,32 @@
         </div>
 
         <div class="__seccion-dos-columnas">
-            <h2>Sección dos columnas</h2>
+            <div class="__h2">Sección dos columnas</div>
             <div class="__columna">
-                <h3>Título 1</h3>
+                <div class="__h3">Título 1</div>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci, nesciunt non aperiam atque commodi.</p>
             </div>
             <div class="__columna">
-                <h3>Título 2</h3>
+                <div class="__h3">Título 2</div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
             <div class="__columna">
-                <h3>Título 3</h3>
+                <div class="__h3">Título 3</div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
             <div class="__columna">
-                <h3>Título 4</h3>
+                <div class="__h3">Título 4</div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
             <div class="__columna">
-                <h3>Título 5</h3>
+                <div class="__h3">Título 5</div>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
             </div>
         </div>
 
-        <h2 class="__emoji __fire">Lorem ipsum</h2>
-        <h2 class="__emoji __movie-camera">Lorem ipsum</h2>
-        <h2 class="__emoji __rocket">Lorem ipsum</h2>
+        <div class="__h2 __emoji __fire">Lorem ipsum</div>
+        <div class="__h2 __emoji __movie-camera">Lorem ipsum</div>
+        <div class="__h2 __emoji __rocket">Lorem ipsum</div>
 
         <div class="__quote __alerta">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
