subimos algunos snippets

--- a/codesnippet.html
+++ b/codesnippet.html
@@ -1,8 +1,37 @@
 <link rel="stylesheet" href="css/atom-one-dark.css">
 
-<pre><code class="language-html">&lt;h1&gt;Hola a todos&lt;/h1&gt;</code></pre>
+<h1>Bienvenida</h1>
+<hr>
+<pre><code class="language-html">
+&lt;h1&gt;Hola a todos&lt;/h1&gt;
 
-<pre><code class="language-javascript">console.log("Bienvenidos a Digital House!")</code></pre>
+</code></pre>
+
+<pre><code class="language-javascript">
+console.log("Bienvenidos a Digital House!")
+
+</code></pre>
+
+<h1>JS101</h1>
+<hr>
+<pre><code class="language-javascript">
+var nombre;
+
+</code></pre>
+<pre><code class="language-javascript">
+var nombre = "María";
+
+</code></pre>
+<pre><code class="language-javascript">
+var nombre1 = "María";
+let nombre2 = "Juan";
+    
+</code></pre>
+<pre><code class="language-javascript">
+const NUMERO_PI = 3.1416;
+        
+</code></pre>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/highlight.min.js"></script>
 <script>hljs.initHighlightingOnLoad();</script>
