Actualizado con wrapper y nuevo css

--- a/examples/columnas/dosColumnasGenerico.html
+++ b/examples/columnas/dosColumnasGenerico.html
@@ -1,23 +1,31 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
 <!-- Notese que DENTRO de una columna se puede poner cualquier contenido que provenga de los otros ejemplos -->
 
-<div class="__seccion-dos-columnas">
-    <!-- Columna 1 -->
-    <div class="__columna">
-        <div class="__h3">Título 1</div>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci, nesciunt non aperiam atque commodi.</p>
+    <div class="__seccion-dos-columnas">
+        <!-- Columna 1 -->
+        <div class="__columna">
+            <div class="__h3">Título 1</div>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate adipisci, nesciunt non aperiam atque commodi.</p>
+        </div>
+        <!-- Fin columna 1 -->
+        <!-- Columna 2 -->
+        <div class="__columna">
+            <div class="__h3">Título 2</div>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
+        </div>
+        <!-- Fin Columna 2-->
     </div>
-    <!-- Fin columna 1 -->
-    <!-- Columna 2 -->
-    <div class="__columna">
-        <div class="__h3">Título 2</div>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet magnam repellat, corrupti voluptatibus dolor consequuntur!</p>
-    </div>
-    <!-- Fin Columna 2-->
-</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
