--- a/examples/imagenes/imagenes.html
+++ b/examples/imagenes/imagenes.html
@@ -1,11 +1,19 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
-<div>
-    <!-- En el src y entre comillas se reemplaza el link a la imagen -->
-    <img style="display: block; margin: 0 auto;" src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
-</div>
+    <div>
+        <!-- En el src y entre comillas se reemplaza el link a la imagen -->
+        <img style="display: block; margin: 0 auto;" src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
+    </div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
