--- a/examples/textos/subtitulo.html
+++ b/examples/textos/subtitulo.html
@@ -1,8 +1,16 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
+
+<main class="courtyard">
 
 <!-- Fin del inicio -->
 
-<div class="__h3">Acá va el subtitulo</div>
+    <div class="__h3">Acá va el subtitulo</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
