--- a/examples/textos/tituloconEmoji.html
+++ b/examples/textos/tituloconEmoji.html
@@ -1,30 +1,38 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
+
+<main class="courtyard">
 
 <!-- Fin del inicio -->
 
 <!-- Dejo ejemplos de los 11 emojis válidos -->
 
-<div class="__h2 __emoji __rocket">Acá va el título</div>
+    <div class="__h2 __emoji __rocket">Acá va el título</div>
 
-<div class="__h2 __emoji __fire">Acá va el título</div>
+    <div class="__h2 __emoji __fire">Acá va el título</div>
 
-<div class="__h2 __emoji __movie-camera">Acá va el título</div>
+    <div class="__h2 __emoji __movie-camera">Acá va el título</div>
 
-<div class="__h2 __emoji __pushpin">Acá va el título</div>
+    <div class="__h2 __emoji __pushpin">Acá va el título</div>
 
-<div class="__h2 __emoji __clapper-board">Acá va el título</div>
+    <div class="__h2 __emoji __clapper-board">Acá va el título</div>
 
-<div class="__h2 __emoji __laptop">Acá va el título</div>
+    <div class="__h2 __emoji __laptop">Acá va el título</div>
 
-<div class="__h2 __emoji __light-bulb">Acá va el título</div>
+    <div class="__h2 __emoji __light-bulb">Acá va el título</div>
 
-<div class="__h2 __emoji __compass">Acá va el título</div>
+    <div class="__h2 __emoji __compass">Acá va el título</div>
 
-<div class="__h2 __emoji __last-track-button">Acá va el título</div>
+    <div class="__h2 __emoji __last-track-button">Acá va el título</div>
 
-<div class="__h2 __emoji __thinking-face">Acá va el título</div>
+    <div class="__h2 __emoji __thinking-face">Acá va el título</div>
 
-<div class="__h2 __emoji __thumbs-up">Acá va el título</div>
+    <div class="__h2 __emoji __thumbs-up">Acá va el título</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->    
