--- a/node-2020-1S/00-bienvenida/virtual/02_orientaciones_generales.html
+++ b/node-2020-1S/00-bienvenida/virtual/02_orientaciones_generales.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 <!-- <link rel="stylesheet" href="../../../css/style.css"> -->
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
 
