--- a/examples/base.html
+++ b/examples/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Courtyard</title>
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-    <link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+    <link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
     <style>
         main {
             max-width: 820px;
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <main>
+    <main class="courtyard">
         <div class="__seccion-titulo-parrafo">
             <div class="__h2">Sección Titulo y párrafo</div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi at autem consequuntur qui ratione vel inventore odit laboriosam quo iure voluptate vitae assumenda est dolorem quasi, velit sit. Veniam, praesentium.</p>
