--- a/examples/especiales/listaConChecks.html
+++ b/examples/especiales/listaConChecks.html
@@ -1,17 +1,25 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
-<div class="__seccion-check">
-    <div class="__h2">Seccion Checks</div>
-    <ul>
-        <li>Check 1</li>
-        <li>Check 2</li>
-        <li>Check 3</li>
-        <li>Check 4</li>
-        <li>Check 5</li>
-    </ul>
-</div>
+    <div class="__seccion-check">
+        <div class="__h2">Seccion Checks</div>
+        <ul>
+            <li>Check 1</li>
+            <li>Check 2</li>
+            <li>Check 3</li>
+            <li>Check 4</li>
+            <li>Check 5</li>
+        </ul>
+    </div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
