--- a/examples/especiales/separadores.html
+++ b/examples/especiales/separadores.html
@@ -1,26 +1,34 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
-<!-- Ejemplo en rojo: Alerta! -->
-<div class="__quote __alerta">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
-</div>
+    <!-- Ejemplo en rojo: Alerta! -->
+    <div class="__quote __alerta">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+    </div>
 
-<!-- Ejemplo en verde: Chek ;) -->
-<div class="__quote __ok">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
-</div>
+    <!-- Ejemplo en verde: Chek ;) -->
+    <div class="__quote __ok">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+    </div>
 
-<!-- Ejemplo en violeta: Para "citas"-->
-<div class="__quote __cita">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
-</div>
+    <!-- Ejemplo en violeta: Para "citas"-->
+    <div class="__quote __cita">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+    </div>
 
-<!-- Ejemplo en azul: Info genérica-->
-<div class="__quote __info">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
-</div>
+    <!-- Ejemplo en azul: Info genérica-->
+    <div class="__quote __info">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat corrupti placeat dolorum impedit iste voluptatum cum officia. Iure, ullam perspiciatis.</p>
+    </div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
