--- a/examples/especiales/tarjetaConImagen.html
+++ b/examples/especiales/tarjetaConImagen.html
@@ -1,18 +1,26 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
-<div class="__seccion-tarjetas">
-    <div class="__h2">Titulo pre-tarjeta</div>
-    <p>Parrafo pre-tarjeta</p>
-    <div class="__wrapper-tarjeta">
-        <img src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
-        <div class="__combo-texto">
-            <div class="__h3">Texto en tarjeta (parte derecha)</div>
-            <p>Otro texto en tarjeta (parte derecha)</p>
+    <div class="__seccion-tarjetas">
+        <div class="__h2">Titulo pre-tarjeta</div>
+        <p>Parrafo pre-tarjeta</p>
+        <div class="__wrapper-tarjeta">
+            <img src="https://i.gyazo.com/6b7fcad86668fa7beb0c117333086743.png" alt="">
+            <div class="__combo-texto">
+                <div class="__h3">Texto en tarjeta (parte derecha)</div>
+                <p>Otro texto en tarjeta (parte derecha)</p>
+            </div>
         </div>
     </div>
-</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
