--- a/examples/siempreIncluir.html
+++ b/examples/siempreIncluir.html
@@ -1,2 +1,8 @@
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
+
+<main class="courtyard">
+
+    <!-- Acá va tu contenido! -->
+
+</main>
