--- a/examples/textos/ejemploCompleto.html
+++ b/examples/textos/ejemploCompleto.html
@@ -1,14 +1,22 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
+
+<main class="courtyard">
 
 <!-- Fin del inicio -->
 
-<div class="__h2">Acá va el título</div>
+    <div class="__h2">Acá va el título</div>
 
-<div class="__h3">Acá va el subtitulo</div>
+    <div class="__h3">Acá va el subtitulo</div>
 
-<p>Acá va el parrafo</p>
+    <p>Acá va el parrafo</p>
 
-<div class="__h2 __emoji __rocket">Acá va el título</div>
+    <div class="__h2 __emoji __rocket">Acá va el título</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
