--- a/examples/textos/ejemploCompletoColor.html
+++ b/examples/textos/ejemploCompletoColor.html
@@ -1,18 +1,26 @@
 <!-- Recordar que esto va siempre y una sola vez -->
 
 <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-<link rel="stylesheet" href="https://hbaravalle.github.io/courtyard/css/style.css">
+<link rel="stylesheet" href="https://dariosus.github.io/courtyard/css/style.css">
 
+<main class="courtyard">
+    
 <!-- Fin del inicio -->
 
 <!-- Notese que si queremos centrar agregamos style="color:blue" (o el color buscado) en el elemento que queremos centrar -->
 <!-- Ojo que no puede haber dos veces el atributo style en el mismo elemento!! -->
 <!-- En este link pueden elegir colores https://www.google.com/search?q=colorpicker&oq=colorpicker -->
 
-<div style="color:blue;" class="__h2">Acá va el título</div>
+    <div style="color:blue;" class="__h2">Acá va el título</div>
 
-<div style="color:red;" class="__h3">Acá va el subtitulo</div>
+    <div style="color:red;" class="__h3">Acá va el subtitulo</div>
 
-<p style="color:#be9bc4;">Acá va el parrafo</p>
+    <p style="color:#be9bc4;">Acá va el parrafo</p>
 
-<div style="color:#fa9a55;" class="__h2 __emoji __rocket">Acá va el título</div>
+    <div style="color:#fa9a55;" class="__h2 __emoji __rocket">Acá va el título</div>
+
+<!-- Recordar que esto también va siempre y una sola vez al final -->
+
+</main>
+
+<!-- Fin del cierre -->
