Update index.html con wrapper

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     
-    <main>
+    <main class="courtyard">
         <div class="__seccion-titulo-parrafo">
             <div class="__h2">Sección Titulo y párrafo</div>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi at autem consequuntur qui ratione vel inventore odit laboriosam quo iure voluptate vitae assumenda est dolorem quasi, velit sit. Veniam, praesentium.</p>
