Primeras modificaciones al index

--- a/index.html
+++ b/index.html
@@ -8,17 +8,45 @@
     <link rel="stylesheet" href="css/style.css">
     <style>
         main {
-            max-width: 820px;
+            max-width: 1400px;
             margin: 0 auto;
+            padding: 0 40px;
         }
+        .__landing-combo {
+            border: 1px solid #eaeaea;
+            border-radius: 6px;
+            margin: 30px 0;
+        }
+
+        .__landing-combo > *:first-child {
+            margin: 0;
+            padding: 0 30px 20px 30px;
+        }
+        .__landing-combo > *:nth-child(2) {
+            margin: 0;
+            padding: 30px;
+            background-color: #eaeaea;
+            font-size: 15px;
+            color: rgb(65, 81, 112);
+        }
+
     </style>
 </head>
 <body>
-    
     <main class="courtyard">
-        <div class="__seccion-titulo-parrafo">
-            <div class="__h2">Sección Titulo y párrafo</div>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi at autem consequuntur qui ratione vel inventore odit laboriosam quo iure voluptate vitae assumenda est dolorem quasi, velit sit. Veniam, praesentium.</p>
+        <h1>Courtyard</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa officia reiciendis dolorem unde eos itaque est totam. Error, sint dolor aliquid vitae id fuga voluptatibus, accusamus enim vero optio deserunt?</p>
+        <div class="__landing-combo">
+            <div class="__seccion-titulo-parrafo">
+                <div class="__h2">Un título de prueba</div>
+                <p>He ocultado el DeLorean en la mina abandonada llamada “Delgado”, que está adyacente al cementerio, como lo muestra el mapa. Espero que pueda permanecer intacto hasta que tú lo descubras en 1955. Dentro, encontrarás instrucciones de reparación. Mi colega de 1955 –o sea, yo- no creo que tenga problemas al repararlo para que puedas volver al futuro. Cuando hayas regresado a 1985, destruye la máquina del tiempo.</p>
+            </div>
+            <div>
+                <pre style="white-space: pre-line; margin: 0">
+                &lt;div class="__h2"&gt;Un título de prueba&lt;/div&gt;
+                &lt;p&gt;He ocultado el DeLorean en la mina abandonada llamada “Delgado”, que está adyacente al cementerio, como lo muestra el mapa. Espero que pueda permanecer intacto hasta que tú lo descubras en 1955. Dentro, encontrarás instrucciones de reparación. Mi colega de 1955 –o sea, yo- no creo que tenga problemas al repararlo para que puedas volver al futuro. Cuando hayas regresado a 1985, destruye la máquina del tiempo.&lt;/p&gt;
+                </pre>
+            </div>
         </div>
         <!-- MODULO DE CÓDIGO -->
         <div class="__seccion-codigo">
