Fix de tamaños tipográficos

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <body>
     <main class="courtyard">
         <h1>Courtyard</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa officia reiciendis dolorem unde eos itaque est totam. Error, sint dolor aliquid vitae id fuga voluptatibus, accusamus enim vero optio deserunt?</p>
+        <p>Courtyard esta pensado como herramientas para el equipo académico para poder cargar contenido en playground con estilo y diseño.</p>
         <div class="__landing-combo">
             <div class="__seccion-titulo-parrafo">
                 <div class="__h2">Un título de prueba</div>
